--- a/pom.xml
+++ b/pom.xml
@@ -5,22 +5,22 @@
 
     <groupId>com.example</groupId>
     <artifactId>micro-microservice</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <version>${build.number}</version>
 
-    <name>micro-microservice</name>
-    <description>Demo project for Spring Boot</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.3.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
+
     </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
+        <build.number>0.0.1-SNAPSHOT</build.number>
     </properties>
 
     <dependencies>
