--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
 jdk:
  - oraclejdk8
-script: ./mvnw deploy -Dbuild.number=${TRAVIS_BUILD_NUMBER}
+script: ./bin/script.sh ${TRAVIS_BUILD_NUMBER}
 install: echo installing
